--- a/render.yaml
+++ b/render.yaml
@@ -1,18 +1,19 @@
 databases:
   - name: teatime
+    ipAllowList: []
     databaseName: teatime
-    user: mtyuji
+    user: yuji
 
 services:
   - type: web
     name: teatime
-    runtime: ruby
-    buildCommand: "./bin/render-build.sh"
-    startCommand: "bundle exec puma -C config/puma.rb"
+    env: ruby
+    buildCommand: "./render-build.sh"
+    startCommand: "bundle exec rails s"
     envVars:
       - key: DATABASE_URL
         fromDatabase:
-          name: teatime
+          name: postgres
           property: connectionString
       - key: RAILS_MASTER_KEY
         sync: false
