--- a/render.yaml
+++ b/render.yaml
@@ -2,7 +2,7 @@ databases:
   - name: teatime
     ipAllowList: []
     databaseName: teatime
-    user: yuji
+    user: tea_time
 
 services:
   - type: web
@@ -13,7 +13,7 @@ services:
     envVars:
       - key: DATABASE_URL
         fromDatabase:
-          name: postgres
+          name: teatime
           property: connectionString
       - key: RAILS_MASTER_KEY
         sync: false
