Clean up for deployment

--- a/bin/render.yaml
+++ b/bin/render.yaml
@@ -10,7 +10,7 @@ services:
     plan: free
     name: teatime
     env: ruby
-    buildCommand: "./render-build.sh"
+    buildCommand: "./bin/render-build.sh"
     startCommand: "bundle exec rails s"
     envVars:
       - key: DATABASE_URL
